tests/fixtures/invalid/bool_gt_dict.py
# Cannot compare with > Bool and Dict[str, int]
x: bool = True > {"a": 1}
